<resources>

    <string name="app_name">Gapi_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="person_name">名前</string>
    <string name="company_name">会社</string>
    <string name="organization_name">組織</string>
    <string name="position_name">役職</string>
    <string name="zip_code">郵便番号</string>
    <string name="address">住所</string>
    <string name="tel1">電話1</string>
    <string name="tel2">電話2</string>
    <string name="mail">メール</string>
    <string name="required">必須</string>
    <string name="map">地図</string>
    <string name="map_satellite">衛星写真</string>
    <string name="current_location_on">現在地を中央に表示</string>
    <string name="current_location_off">現在地を中央に表示</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cannot_get_address">住所の取得に失敗しました</string>
    <string name="select_target">対象を選択してください</string>

</resources>