<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:shrinkColumns="1">
    <!-- 名前 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/personNameText"
            android:layout_span="2"
            android:hint="@string/required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <!-- 会社 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/companyNameText"
            android:layout_span="2"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <!-- 組織 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/organization_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/organizationNameText"
            android:layout_span="2"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
    <!-- 役職 -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/position_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/positionNameText"
            android:layout_span="2"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    
</TableLayout>
        